Fix: Text is illegible in dark mode
Problem: In Dark Mode some text becomes greyish (on a bright background).
Solution: Set color hardcoded to black.

Notes: future version should adjust to the user's theme

--- a/src/web_visualizer/src/main.css
+++ b/src/web_visualizer/src/main.css
@@ -1,6 +1,7 @@
 body{
   font-size:80%;
   font-family: Arial, Helvetica, sans-serif;
+  color: black;
 }
 textarea{
   font-size:85%;
